--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-:D :D :D <3
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<link rel="style/less" type="text/css" href="main.less" />
+		<script src="js/less.js" type="text/javascript"></script>
+	</head>
+	<body>
+		<span>Starting nicely (:</span>
+	</body>
+</html>
