--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<link rel="style/less" type="text/css" href="main.less" />
+		<link rel="style/main.less" type="text/css" href="main.less" />
 		<script src="js/less.js" type="text/javascript"></script>
 	</head>
 	<body>
