--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 	<head>
-		<link rel="style/main.less" type="text/css" href="main.less" />
-		<script src="js/less.js" type="text/javascript"></script>
+    <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
+    <link rel="stylesheet" href="style/main.css" />
 	</head>
 	<body>
-		<span>Starting nicely (:</span>
+    <div class="bg"></div>
+    <div class="content">
+      <h1>
+        <span class="line"></span>
+        <span class="quote">
+          “Where there's a will, there's a way”
+        </span>
+        <span class="line"></span>
+      </h1>
+      <div class="menu">
+        <div class="logo">
+          <strong>Thales Oliveira</strong>
+
+          <i>Full Stack Developer</i>
+        </div>
+        <div class="stuff">
+          <strong>oliveiraethales@gmail.com</strong>
+        </div>
+        <div class="blog">
+          <a href="blog.html">Check out my posts</a>
+        </div>
+      </div>
+    </div>
+    <div class="bg-overlay"></div>
 	</body>
 </html>
