Add links :smiley_cat:

--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
           <i>Full Stack Developer</i>
         </div>
         <div class="stuff">
-          <strong>oliveiraethales@gmail.com</strong>
+          <ul>
+            <li>
+              <a class="links-mail" href="mailto:oliveiraethales@gmail"></a>
+            </li>
+            <li>
+              <a class="links-github" target="_blank" href="http://github.com/oliveiraethales"></a>
+            </li>
+            <li>
+              <a class="links-linkedin" target="_blank" href="http://www.linkedin.com/profile/view?id=350096726&trk=nav_responsive_tab_profile"></a>
+            </li>
+          </ul>
         </div>
         <div class="blog">
           <a href="blog.html">Check out my posts</a>
