Improvements and resume :sparkles:

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+    <meta name=viewport content="width=device-width, initial-scale=1">
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
+    <link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Arvo' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style/main.css" />
 	</head>
 	<body>
@@ -16,9 +19,15 @@
       </h1>
       <div class="menu">
         <div class="logo">
-          <strong>Thales Oliveira</strong>
-
-          <i>Full Stack Developer</i>
+          <div class="name">
+            Thales Oliveira
+          </div>
+          <div class="divider">
+            <hr>
+          </div>
+          <div class="desc" style="height: 40px;">
+            Full Stack Developer
+          </div>
         </div>
         <div class="stuff">
           <ul>
@@ -30,6 +39,9 @@
             </li>
             <li>
               <a class="links-linkedin" target="_blank" href="http://www.linkedin.com/profile/view?id=350096726&trk=nav_responsive_tab_profile"></a>
+            </li>
+            <li>
+              <a class="links-resume" target="_blank" href="https://drive.google.com/file/d/0B70xRJSXchXCcVVpV2JOZllMYm8/view?usp=sharing"></a>
             </li>
           </ul>
         </div>
