--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <hr>
           </div>
           <div class="desc" style="height: 40px;">
-            Full Stack Developer
+            Software Engineer
           </div>
         </div>
         <div class="stuff">
@@ -47,7 +47,7 @@
               <a class="links-github" target="_blank" href="http://github.com/oliveiraethales"></a>
             </li>
             <li>
-              <a class="links-linkedin" target="_blank" href="http://www.linkedin.com/profile/view?id=350096726&trk=nav_responsive_tab_profile"></a>
+              <a class="links-linkedin" target="_blank" href="https://www.linkedin.com/in/thales-oliveira-3322b699"></a>
             </li>
             <li>
               <a class="links-resume" target="_blank" href="https://drive.google.com/file/d/0B70xRJSXchXCcVVpV2JOZllMYm8/view?usp=sharing"></a>
@@ -55,7 +55,7 @@
           </ul>
         </div>
         <div class="blog">
-          <a href="https://medium.com/@mindhaven">Read mine stuff</a>
+          <a href="https://medium.com/@mindhaven">Posts and writings</a>
         </div>
       </div>
     </div>
