--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <a class="links-linkedin" target="_blank" href="https://www.linkedin.com/in/thales-oliveira-3322b699"></a>
             </li>
             <li>
-              <a class="links-resume" target="_blank" href="https://drive.google.com/file/d/0B70xRJSXchXCcVVpV2JOZllMYm8/view?usp=sharing"></a>
+              <a class="links-resume" target="_blank" href="https://goo.gl/ueF8id"></a>
             </li>
           </ul>
         </div>
